add categories to content
