# bin/src/views/MContentView.js
@@ -3,6 +3,10 @@ Object.defineProperty(exports, "__esModule", { value: true });
 var ContentModule;
 (function (ContentModule) {
     function convertContentView(mContentView) {
+        let categories = '';
+        mContentView.categories.forEach(element => {
+            categories += element + ',';
+        });
         const contentEntity = {
             title: mContentView.title,
             content: mContentView.content,
@@ -10,6 +14,7 @@ var ContentModule;
             image: mContentView.image,
             active: mContentView.active,
             userId: mContentView.userId,
+            categories: categories,
         };
         return contentEntity;
     }
